Fix: z-index per il proprio video in evidenza nelle chatroom.
Ho notato che il video altrui poteva coprire il proprio nelle chatroom, ho usato z-index di CSS per evitare che ciò si ripeta.

--- a/public/stylesheets/chatroom.sass
+++ b/public/stylesheets/chatroom.sass
@@ -10,6 +10,7 @@ html, body
         height: 5cm
         -webkit-transform: scaleX(-1)
         transform: scaleX(-1)
+        z-index: 2000
 
 #room
     overflow: auto
